--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Anagram</string>
+    <string name="enter_text_for_anagram">Enter text for anagram</string>
+    <string name="enter_symbols_to_ignore">Enter symbols to ignore</string>
+    <string name="here_must_be_your_anagram">Here must be your anagram</string>
+    <string name="task_1">Task 1</string>
 </resources>
